Fix plan UI on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -453,8 +453,8 @@
   }
 
   .planCard {
-    left: -10px;
-    bottom: -10px;
+    left: 18px;
+    bottom: 18px;
     width: 120px;
     padding: 9px;
   }
